Add OLP Edge SDK and demo app
Signed-off-by: Jon Oster <jon.oster@here.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -4,6 +4,10 @@ BBPATH := "${BBPATH}:${LAYERDIR}"
 BBFILES := "${BBFILES} ${LAYERDIR}/recipes-*/*.bb \ 
            ${LAYERDIR}/recipes-*/*.bbappend" 
 
+BBFILE_COLLECTIONS += "booma" 
+BBFILE_PATTERN_booma := "^${LAYERDIR}/" 
+BBFILE_PRIORITY_booma := "5"
+
 BBFILE_COLLECTIONS += "rplidar-roboticia"
 BBFILE_PATTERN_rplidar-roboticia := "^${LAYERDIR}/"
 BBFILE_PRIORITY_rplidar-roboticia := "5"
@@ -11,3 +15,7 @@ BBFILE_PRIORITY_rplidar-roboticia := "5"
 BBFILE_COLLECTIONS += "booma-client"
 BBFILE_PATTERN_booma-client := "^${LAYERDIR}/"
 BBFILE_PRIORITY_booma-client := "5"
+
+BBFILE_COLLECTIONS += "olp-cpp-sdk"
+BBFILE_PATTERN_olp-cpp-sdk := "^${LAYERDIR}/"
+BBFILE_PRIORITY_olp-cpp-sdk := "5"
